# GridSnap

./: .gitignore  LICENSE  README.md  README_TR.md
.github/workflows/: release.yml
gridsnap/: index.html  package-lock.json  package.json
gridsnap/src/: App.module.css  App.tsx  main.tsx
gridsnap/src-tauri/: Cargo.toml  tauri.conf.json
gridsnap/src-tauri/capabilities/: default.json
gridsnap/src-tauri/src/: lib.rs  main.rs  tray.rs
gridsnap/src-tauri/src/commands/: app.rs  autostart.rs  backup.rs  clipboard.rs  mod.rs  sheet_password.rs  shortcut.rs  vault.rs
gridsnap/src-tauri/src/models/: mod.rs  settings.rs  vault.rs
gridsnap/src-tauri/src/services/: encryption.rs  mod.rs  storage.rs  vault_manager.rs
gridsnap/src/components/common/: ConfirmDialog.module.css  ConfirmDialog.tsx  HelpPanel.module.css  HelpPanel.tsx  LockScreen.module.css  LockScreen.tsx  SettingsPanel.module.css  SettingsPanel.tsx  SheetPasswordModal.module.css  SheetPasswordModal.tsx  SheetSwitcher.module.css  SheetSwitcher.tsx  ShortcutRecorder.tsx  Toast.module.css  Toast.tsx
gridsnap/src/hooks/: useCellSelection.ts  useClipboard.ts  useColumnResize.ts  useGridNavigation.ts  useRowResize.ts  useSearch.ts
gridsnap/src/services/: autostartService.ts  clipboardService.ts  sheetPasswordService.ts  shortcutService.ts  vaultService.ts
gridsnap/src/stores/: settingsStore.ts  vaultStore.ts
gridsnap/src/theme/: reset.css  scrollbar.css  themes.ts  tokens.css  typography.css
gridsnap/src/types/: events.ts  grid.ts  vault.ts
gridsnap/src/utils/: cellKey.ts  gridMath.ts
(+13 files in other folders)
