[package]
name = "gridsnap"
version = "0.1.0"
edition = "2021"

[lib]
name = "gridsnap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gridsnap"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
